<resources>
    <string name="app_name">Школа диджериду</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="koala_description">The koala or, inaccurately</string>
    <string name="btn_next_lesson">Следующий урок</string>
    <string name="tag_lesson_history">История</string>
    <string name="tag_lesson_theory">Теория</string>
    <string name="tag_lesson_practice">Практика</string>
    <string name="module1">Модуль 1</string>
    <string name="module2">Модуль 2</string>
    <string name="lesson1">Урок 1</string>
    <string name="lesson2">Урок 2</string>
    <string name="lesson3">Урок 3</string>
    <string name="lesson4">Урок 4</string>
    <string name="lesson5">Урок 5</string>
    <string name="lesson6">Урок 6</string>
    <string name="lesson7">Урок 7</string>
    <string name="lesson8">Урок 8</string>
    <string name="lesson9">Урок 9</string>
    <string name="lesson10">Урок 10</string>
    <string name="lesson11">Урок 11</string>
    <string name="lesson12">Урок 12</string>
    <string name="lesson13">Урок 13</string>
    <string name="lesson14">Урок 14</string>
    <string name="lesson15">Урок 15</string>
    <string name="lesson16">Урок 16</string>
    <string name="lesson17">Урок 17</string>
    <string name="lesson18">Урок 18</string>
    <string name="lesson19">Урок 19</string>
    <string name="lesson20">Урок 20</string>
    <string name="module2_lesson1_title">С чистого листа</string>
    <string name="module2_lesson2_title">Медитирующие согласные</string>
    <string name="module2_lesson3_title">Ритмы Новичка</string>
    <string name="module2_lesson4_title">Соединяем слоги</string>
    <string name="lesson1_title">Вступление</string>
    <string name="text2_c1_m1_l1">Лука открыл глаза и сразу зажмурился: яркое, палящее солнце ослепило его. Впереди простиралась красная, бесконечная пустыня, горячий ветер обволакивает тело.</string>
    <string name="text3_c1_m1_l1">Ничего не помню… Как я тут оказался? Это сон?</string>
    <string name="text4_c1_m1_l1">Лука резко зажмурил глаза. Он похлопал себя по щекам, ущипнул себя, но открыв глаза, вновь понял, что ничего не поменялась. Солнце становилось невыносимым.\n\nПока Лука собирался с силами, из-за горизонта начали приближаться 2 идущие фигуры, напоминающие аборигенов. Один из них высокий и худощавый. Из одежды на нем только красная набедренная повязка, на теле узоры из белой краски, в правой руке он держит копьё. Второй абориген в меру упитанный и поменьше ростом. У него недлинные кучерявые волосы, набедренная повязка из листьев. Судя по выражению его лица - он уже очень устал. <br></br><br></br> И вот, они уже стоят напротив. Все молча, смотрят друг на друга.</string>
    <string name="text5_c1_m1_l1">Эм…Привет! Меня зовут Лука, вы не подскажете где это я?</string>
    <string name="text6_c1_m1_l1">Аборигены переглянулись и худощавый ответил:</string>
    <string name="text7_c1_m1_l1">Привет, Лука. Я Вару, а это Валу. Что ты делаешь в «священной пустыне раскалённой пустоты»?</string>
    <string name="text8_c1_m1_l1">Я не знаю. Ничего не помню.</string>
    <string name="text9_c1_m1_l1">Тебе не стоит тут находиться. Наше поселение находится неподалеку. Пойдём  с нами, мы напоим и накормим тебя, а там подумаем, как же помочь тебе.</string>
    <string name="text10_c1_m1_l1">Вару, ты уверен? Мы уже третьи сутки приходим без добычи. Что на это скажет Северный ветер?</string>
    <string name="text11_c1_m1_l1">Всё будет хорошо, пойдём.</string>
    <string name="text12_c1_m1_l1">Лука, Вару и Валу отправились в небольшое путешествие.\n\nПостепенно пустынные пейзажи начали сменяться растительной местностью, на горизонте показалось поселение, состоящее из маленьких хижин, в центре стояла самая большая. Компания отправилась к ней. Слышны прибои морских волн, неподалёку виднелся пляж.\n\nРебята вошли в хижину. В конце хижины сидел старик с длинной бородой и седыми волосами, заплетенными в дреды и ленты. В правой руке он держал кисть, которой наносил узоры на длинный ствол дерева. Он был сосредоточен.</string>
    <string name="text13_c1_m1_l1">Дядюшка Джарра! Мы пришли! По пути домой мы встретили незнакомца в «священной пустыне раскалённой пустоты». Он ничего не помнит, и мы решили взять его с собой. Ты знаешь всё на свете – как нам ему помочь?</string>
    <string name="text14_c1_m1_l1">Дядюшка Джара окинул поднял глаза и с прищуром посмотрел на ребят. Его взгляд был наполнен мудростью веков, он улыбнулся.</string>
    <string name="text15_c1_m1_l1">Пришедший из священной пустыни появляется один раз, чтобы получить древние знания и нести их в мир.</string>
    <string name="text16_c1_m1_l1">О каких знаниях идёт речь? Я просто хочу домой, отпустите меня. Где тут можно купить билет на самолёт?</string>
    <string name="text17_c1_m1_l1">Тебя привела незримая сила, жаждущая знаний. Скоро ты всё поймёшь.</string>
    <string name="text18_c1_m1_l1">Лука хотел было возразить, но Джарра начал играть на инструменте, который он только что разукрашивал. Сильные вибрации начали уносить в глубокие дали сознания, и под её волшебным воздействием Лука погрузился во «время сновидений». Какие-то обрывки воспоминаний, картинки проносились мимо – в них ключ к разгадке как он сюда попал. Во сне он понял, что надо научиться играть на этом инструменте и придёт понимание. Когда Лука очнулся - он произнёс только одну фразу:</string>
    <string name="text19_c1_m1_l1">Научите меня!</string>
    <string name="lesson2_title">Диджериду</string>
    <string name="text2_c1_m1_l2">Я старый шаман Джарра, люди называют меня «Ветер Перемен». Ты находишься в племени австралийских аборигенов, мы зовём себя «Люди 5 стихий». Всю свою жизнь я передаю учение о <b>диджериду</b> и…</string>
    <string name="text3_c1_m1_l2">Дидже… что????</string>
    <string name="text4_c1_m1_l2">ДИ-ДЖЕ-РИ-ДУ. Вижу, как твое выражение начинает проясняться. Диджериду - наш народный духовой инструмент. Это очень древний инструмент, один из самых первых на нашей планете. Игра на диджериду погрузила тебя во «время сновидений».</string>
    <string name="text5_c1_m1_l2">Ого!</string>
    <string name="text6_c1_m1_l2">Диджериду - создает сама природа. У нас в Австралии живут термиты - это такие большие муравьи. Они очень не любят солнце, поэтому они прогрызают эвкалиптовые деревья изнутри, образуя полость. Когда приходит время - духи ведут меня в лес, я прислушиваюсь к ним и нахожу нужное мне дерево: если внутри оно пустое - срубаю. Очищаю внутренности от шелухи и формирую мундштук из воска. Инструмент готов. Ну-ка держи!</string>
    <string name="text7_c1_m1_l2">Ветер Перемен подал один из инструментов, которые лежали в углу. Лука в восхищении начал рассматривать его. Инструмент покрыт тотемными рисунками, верхняя его часть узкая и покрыта воском, а нижняя часть постепенно расширяется.</string>
    <string name="text8_c1_m1_l2">И как же вы на нём играете?</string>
    <string name="text9_c1_m1_l2">Диджериду - это духовой инструмент. Основной звук получается за счет колебаний губ. Этот звук мы называем - Дроном.</string>
    <string name="text10_c1_m1_l2">Ого! Это значит, что дроном можно наиграть какую-то мелодию, да?</string>
    <string name="text11_c1_m1_l2">Нет. Диджериду звучит в одной ноте. Один диджериду - одна нота, бывают исключения - я расскажу об этом позже. Нота меняется в зависимости от длины инструмента - чем он длиннее тем басовее звук и ниже нота. В зависимости от высоты ноты мы определяем стиль игры. У тебя в руках Диджериду в ноте ДО (C). Как правило  в такой тональности мы играем что-нибудь медитативное. Это расслабляет тело и приводит в порядок ум.</string>
    <string name="text12_c1_m1_l2">А вон там лежит какой-то не раскрашенный и короткий! Наверное, у него высокая тональность, да?</string>
    <string name="text13_c1_m1_l2">Всё верно. Этот инструмент в ноте ФА (F). На нем мы играем быстрые и ритмичные композиции, да такие, что в пляс пустишься! Я буду раскрашивать его завтра - приходи, поможешь мне.</string>
    <string name="text14_c1_m1_l2">Вдруг абориген-шаман задумался, вздохнул и сказал</string>
    <string name="text15_c1_m1_l2">Я слышал истории, что где-то там за морями их изготавливают немного иначе. В любом случае - урок на сегодня закончен. Обучайся постепенно - только так можно достигнуть мастерства. Сейчас отправляйся к Кабикари, он расскажет тебе как начать играть.</string>
    <string name="lesson3_title">Подготовительные упражнения</string>
    <string name="lesson3_title2">Упражнение 1: Разминка мастера</string>
    <string name="lesson3_title3">Упражнение 2: Улыбка глубокой иронии</string>
    <string name="lesson3_title4">Упражнение 3: Воздушный шар у меня во рту</string>
    <string name="lesson3_title5">Упражнение 4: Выпусти внутреннего комара</string>
    <string name="lesson3_title6">Упражнение 5: Древние вибрации</string>
    <string name="lesson3_title7">Упражнение 6: Изменчивость вибраци</string>
    <string name="lesson3_title8">Упражнение 7: Дыхание шамана</string>
    <string name="lesson3_mini_title1">Щёки.</string>
    <string name="lesson3_mini_title2">Губы.</string>
    <string name="text1_c1_m1_l3">Здравствуй, Лука! Мне сказали, что ты придёшь. Давай начнём с подготовительных упражнений!</string>
    <string name="text2_c1_m1_l3">Но я хочу сразу играть, дайте мне инструмент!</string>
    <string name="text3_c1_m1_l3">Нет, так не пойдёт. Тебе, мой дорогой ученик, обязательно на первых этапах обучения необходимо делать разминку. Это очень простые упражнения! Кстати, не забудь помыть руки. Повторяй за мной</string>
    <string name="text4_c1_m1_l3">Это особый вид артикуляционный разминки.</string>
    <string name="text5_c1_m1_l3">Подушечками пальцев начни массировать щёки, выполняя круговые движения. Продолжая разминать щёки, постепенно передвигай круговые движения немного вверх к скулам, а потом немного вниз к челюсти.\n\n<u>Сколько делать:</u> 3 подхода по 15 секунд</string>
    <string name="text6_c1_m1_l3">1)  Подушечками пальцев, слегка надавливая и делая небольшие круговые движения, сначала разомни верхнюю губу, затем нижнюю.\n\n<u>Сколько делать:</u> 2 подхода по 10 секунд\n\n2)  Свободно сложи губы вместе. Теперь сомкни их чуть сильнее. Теперь расслабь.\n\n<u>Сколько делать:</u> 10 раз\n\n3)  Сложи губы в трубочку. В этом положении сначала потяни и вверх к носу, потом вниз к челюсти. Затем вправо, влево. Далее по кругу.\n\n<u>Сколько делать:</u> 10 раз верх-вниз, 10 раз влево-вправо, 10 раз по кругу.</string>
    <string name="lesson11_title">Обертоны. Практика</string>
    <string name="text1_c1_m1_l11"><b>Бери инструмент. Попробуй теперь проделать то же самое</b></string>
    <string name="text2_c1_m1_l11"><b>Упражнение №1. Проговаривай по одному гласному слогу.</b>\n</string>
    <string name="text3_c1_m1_l11">Вдох, протяжный обертон <b>“А”</b></string>
    <string name="text4_c1_m1_l11">Вдох, протяжный обертон <b>“О”</b></string>
    <string name="text2_c1_m1_l12"><b>Задача:</b> ровно сыграть ритм на выдохе столько сколько сможешь</string>
    <string name="lesson13_title">РИТМ 2</string>
    <string name="text1_c1_m1_l13">Ритм: <b>Воу Воу И А О</b></string>
    <string name="text2_c1_m1_l13"><b>Советы:</b>\n\n- Поиграй по отдельности каждую гласную - О, У, И, А\n\n- Каждая гласная должна звучать четко и звонко\n\n- Слог Воу начинай играть с позиции открытых щёк. Когда начинаешь произносить Во - щеками начинай выталкивать воздух переходя на протяжный “О”, а затем на “У”\n\n- Когда почувствуешь, что уверенно играешь все звуки - совмести их в единый ритм\n\n- Попробуй менять скорость ритма\n\n- Самостоятельно придумай разные вариации этого ритма</string>
</resources>