<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Module1Lesson2Fragment">

    <ScrollView
        android:background="#EA926C"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_module1_lesson2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Урок 2"
                android:textAlignment="center"
                android:textSize="45sp" />

            <LinearLayout
                android:background="@drawable/linear_layout_radius"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/tag_lesson_theory"
                    android:textSize="15sp"
                    android:background="@drawable/category_label"/>

                <TextView
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="#7D3F3F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson2_title"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text2_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/c1_m1_l2_img1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text3_c1_m1_l2"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text4_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text5_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/protagonist_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text6_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text7_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/protagonist_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text8_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text9_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/protagonist_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text10_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text11_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/protagonist_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text12_c1_m1_l2"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text13_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="265dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/c1_m1_l2_img2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text14_c1_m1_l2"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text15_c1_m1_l2"
                    android:fontFamily="@font/montserrat_italic"
                    android:textColor="@color/shaman_replicas"
                    android:textSize="@dimen/lesson_text_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_next_lesson"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>